APP-1587: Appears the name who approve/deny the attachment in sender's side
