# helpdesk-service/helpdesk-service-api/src/main/swagger/helpdesk-service-api.yaml
@@ -341,7 +341,6 @@ paths:
             description: BAD REQUEST |
               Invalid stream id.
               Invald maker id.
-              Invalid checker id.
               Invalid id.
               Invalid state.
               Required parameter was not provided.
@@ -423,11 +422,10 @@ definitions:
           format: int64
           description: |
             The id of agent who send an attachment
-        checkerId:
-          type: integer
-          format: int64
+        checker:
+          $ref: '#/definitions/UserInfo'
           description: |
-            The id of agent who approved/denied an attachment
+            The agent who approved/denied an attachment
         streamId:
           type: string
         state:
